Fix #397: FIDO2 Test Application: Drop operation data manipulation (#400)
* Fix #397: FIDO2 Test Application: Drop operation data manipulation

* Handle credential encoding